Made social links uniform blue in dark mode Added proper dark mode support for mobile and fixed menu in mobile

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -39,12 +39,12 @@
 }
 
 #header.scroll > div:first-child {
-  @apply bg-page md:bg-white/90 md:backdrop-blur-md;
+  @apply bg-white md:bg-white/90 md:backdrop-blur-md;
   box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
 }
 .dark #header.scroll > div:first-child,
 #header.scroll.dark > div:first-child {
-  @apply bg-page md:bg-[#030621e6] border-b border-gray-500/20;
+  @apply bg-slate-900 md:bg-[#030621e6] border-b border-gray-500/20;
   box-shadow: none;
 }
 /* Make sure bullets are visible in dark mode */
@@ -57,13 +57,28 @@
   @apply py-3;
 } */
 
+#header.expanded > div:first-child {
+  @apply bg-white;
+}
+
+.dark #header.expanded > div:first-child,
+#header.expanded.dark > div:first-child {
+  @apply bg-slate-900;
+}
+
 #header.expanded nav {
   position: fixed;
-  top: 70px;
+  top: 150px;
   left: 0;
   right: 0;
-  bottom: 70px !important;
+  bottom: 60px !important;
   padding: 0 5px;
+  @apply bg-white;
+}
+
+.dark #header.expanded nav,
+#header.expanded.dark nav {
+  @apply bg-slate-900;
 }
 
 .dropdown:focus .dropdown-menu,
